--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 fastapi
 uvicorn
 python-multipart
-torch==2.1.2
-torchvision==0.16.2
-facenet-pytorch==2.6.0
-numpy==1.26.4
+
+torch
+torchvision
+
+facenet-pytorch
+numpy
 scikit-learn
 pillow
